--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo data storage component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Fylo data storage component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  You’ve used 815 GB of your storage
-
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <div class="options-container">
+      <p><img src="images/logo.svg" alt="logo_fylo" /></p>
+      <ul>
+        <li><img src="images/icon-document.svg" alt="document" /></li>
+        <li><img src="images/icon-folder.svg" alt="folder" /></li>
+        <li><img src="images/icon-upload.svg" alt="upload" /></li>
+      </ul>
+    </div>
+    <div class="progression">
+      <div class="progression__infos">
+        <p>You've used 815 GB of your storage</p>
+        <p>185 GB LEFT</p>
+      </div>
+      <div class="progression__barre"></div>
+      <div class="progression__infos">
+        <p>0 GB</p>
+        <p>1000 GB</p>
+      </div>
+    </div>
+  </body>
 </html>
